infra/templates/k8s/deploy/celery-flower.tpl.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ${NAMESPACE}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: goat-celery-flower
  namespace: ${NAMESPACE}
spec:
  replicas: 1
  selector:
    matchLabels:
      app: goat-celery-flower
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 100%
      maxUnavailable: 50%
  template:
    metadata:
      labels:
        app: goat-celery-flower
    spec:
      containers:
        - image: mher/flower
          imagePullPolicy: IfNotPresent
          name: goat-celery-flower
          ports:
            - containerPort: 5555
---
apiVersion: v1
kind: Service
metadata:
  name: goat-celery-flower-service
  namespace: ${NAMESPACE}
spec:
  ports:
    - port: 80
      targetPort: 5555
  type: NodePort
  selector:
    app: goat-celery-flower
